# program-Designedforusers

./: PROJECT_DESCRIPTION.md  README.md
anchor_project/: Anchor.toml  package.json
anchor_project/programs/anchor_project/: Cargo.toml
anchor_project/programs/anchor_project/src/: lib.rs
anchor_project/programs/vault_stub/: Cargo.toml
anchor_project/programs/vault_stub/src/: lib.rs
anchor_project/tests/: anchor_project.ts
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/x402/: config.ts
frontend/app/api/x402/events/: route.ts
frontend/app/claim/: page.tsx
frontend/app/events/: page.tsx
frontend/app/events/[eventId]/: page.tsx
frontend/app/organizers/[walletAddress]/: page.tsx
frontend/app/verify/: page.tsx
frontend/components/dashboard/: attendee-panel.tsx  organizer-panel.tsx  pass-manager.tsx  solana-pay-panel.tsx  treasury-panel.tsx  verifier-panel.tsx  x402-panel.tsx
frontend/components/landing/: hero-section.tsx  stat-grid.tsx  yield-timeline.tsx
frontend/components/providers/: client-providers.tsx  solana-provider.tsx
frontend/components/ui/: button.tsx  gradient-card.tsx  skeleton.tsx  transaction-status.tsx  wallet-button.tsx
frontend/lib/: env.ts  errors.ts  eventflux-idl.json  pdas.ts  placeholders.ts  utils.ts
frontend/lib/hooks/: use-event-data.ts  use-event-detail.ts  use-eventflux-program.ts  use-organizer-events.ts  use-transaction.ts  use-vault-pulse.ts  use-wallet-passes.ts  use-x402.ts
frontend/lib/x402/: client.ts  index.ts  server.ts  types.ts
(+1 files in other folders)
