[package]
name = "vault_stub"
version = "0.1.0"
description = "Mock vault adapter used for EventFlux testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_stub"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
